fix(build): habilita FFM preview APIs (Java 21)
- build.gradle: --enable-preview no JavaCompile
- NativeChunkLoader: allocateFrom -> allocateUtf8String (API Java 21)
- NativeChunkLoader: remove campo libraryArena não usado
- build.yml: JAVA_TOOL_OPTIONS=--enable-preview no CI

Resolve 10 erros do CI: preview API desabilitada + método inexistente em Java 21.